JS base funzionante / Milestone uno completata

--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Boolfix</title>
+        <title>Boolflix</title>
         <link rel="stylesheet" href="style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
         <header>
-            <img src="https://fontmeme.com/permalink/200522/f1e4be92874ed4b4cd86114abfb7bf74.png" alt="">
+            <img src="https://fontmeme.com/permalink/200524/646793dd12cd2fe24043bdf42bce4831.png" alt="">
             <input type="text" name="" value="">
+            <button type="button" name="search">Cerca</button>
         </header>
         <main>
 
         </main>
+        <script src="main.js" charset="utf-8"></script>
     </body>
 </html>
