--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="container-element">
                 <span class="title">{{title}}</span>
                 <span class="titleOriginal">{{titleOriginal}}</span>
-                <span class="language">{{language}}</span>
-                <span class="vote">{{vote}}</span>
+                <img src="flags/{{language}}.png" alt="">
+                <span class="vote"></span>
             </div>
         </script>
         <script src="main.js" charset="utf-8"></script>
