--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             <div class="container-element">
                 <span class="title">{{title}}</span>
                 <span class="titleOriginal">{{titleOriginal}}</span>
-                <img src="flags/{{language}}.png" alt="">
-                <span class="vote"></span>
+                <div class="flag">
+                    {{{language}}}
+                </div>
+                <span class="{{vote}}"></span>
             </div>
         </script>
         <script src="main.js" charset="utf-8"></script>
