--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="flag">
                             <span>Lingua: </span> {{{language}}}
                         </div>
-                        <span class="{{vote}}">Voto: </span>
+                        <span class="vote-{{type}}">Voto: </span>
                     </div>
                 </div>
             </div>
